--- a/.github/workflows/default-ci.yml
+++ b/.github/workflows/default-ci.yml
@@ -13,6 +13,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
