--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@privy-io/react-auth": "^2.4.4",
+    "@privy-io/wagmi-connector": "^0.1.13",
+    "@tanstack/react-query": "^5.66.7",
+    "clsx": "^2.1.1",
+    "ethers": "^6.4.0",
+    "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.23.3",
+    "wagmi": "^2.14.11"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
